framework/tests/framework/UnimportedExtends1.java
// :: error: (type.checking.not.run)

// :: error: cannot find symbol
public class UnimportedExtends1 extends UnimportedClass {}
